Closed Bug 1822889 Opened 3 years ago Closed 3 years ago

Fix problems in ObfuscatingVFS with decoding frames read from the WAL file during recovery

Categories

(Core :: SQLite and Embedded Database Bindings, defect, P2)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox113 --- fixed

People

(Reporter: janv, Assigned: janv)

References

Details

Attachments

(1 file)

The reserved bytes need to be cleared in obfsDecode to match the original content which was used for calculating checksums and obfsRead needs to handle the case when the requested amount is OBFS_PGSZ + WAL_FRAMEHDRSIZE.

Attachment #9323561 - Attachment description: Bug 1822889 - Fix problems in ObfuscatingVFS with decoding frames read from the WAL file during recovery; r=#dom-storage-reviewers → Bug 1822889 - Fix problems in ObfuscatingVFS with decoding frames read from the WAL file during recovery; r=#dom-storage-reviewers,asuth,hsingh
Blocks: 1639545
Pushed by jvarga@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a67ad88892d1 Fix problems in ObfuscatingVFS with decoding frames read from the WAL file during recovery; r=dom-storage-reviewers,asuth,hsingh
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
Product: Toolkit → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: