Bug 1822889 - Fix problems in ObfuscatingVFS with decoding frames read from the WAL file during recovery; r=dom-storage-reviewers,asuth,hsingh

Differential Revision: https://phabricator.services.mozilla.com/D172824